--- a/NEWS
+++ b/NEWS
@@ -69,6 +69,7 @@ gnutls_x509_privkey_import_openssl: Added
 gnutls_load_file: Added
 gnutls_pkcs12_simple_parse: Added
 gnutls_certificate_set_x509_system_trust: Added
+gnutls_certificate_set_pin_function: Added
 gnutls_x509_trust_list_add_system_trust: Added
 gnutls_x509_trust_list_add_trust_file: Added
 gnutls_x509_trust_list_add_trust_mem: Added
