--- a/doc/cha-tokens.texi
+++ b/doc/cha-tokens.texi
@@ -211,7 +211,7 @@ To avoid conflicts with multiple registered callbacks for PIN functions,
 set functions. In addition context specific PIN functions are allowed, e.g., by
 using functions below.
 
-@showfuncC{gnutls_certificate_set_pin_function,gnutls_pubkey_set_pin_function,gnutls_privkey_set_pin_function}
+@showfuncE{gnutls_certificate_set_pin_function,gnutls_pubkey_set_pin_function,gnutls_privkey_set_pin_function,gnutls_pkcs11_obj_set_pin_function,gnutls_x509_crt_set_pin_function}
 
 Moreover PKCS #11 modules must be reinitialized on the child processes
 after a @funcintref{fork}. @acronym{GnuTLS} provides @funcref{gnutls_pkcs11_reinit}
