--- a/doc/latex/macros.tex
+++ b/doc/latex/macros.tex
@@ -193,6 +193,10 @@
 {\vspace{0.5cm}{\bf Description:}\footnotesize}
 {}
 
+\newenvironment{functionLimitation}%
+{\vspace{0.5cm}{\it Limitation:}\footnotesize}
+{}
+
 \newenvironment{enum}%
 {}%
 {}
