--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.22 (unreleased)
+
+** certtool: Allow the user to choose the hash algorithm
+when signing certificate request or certificate revocation list.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.21 (released 2012-07-02)
 
 ** libgnutls: fixed bug in gnutls_x509_privkey_import() 
