--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ See the end for copying conditions.
 ** certtool: Allow the user to choose the hash algorithm
 when signing certificate request or certificate revocation list.
 
+** Restored the behavior of gnutls_x509_privkey_import_pkcs8()
+which now may (again) accept a NULL password.
+
 ** API and ABI modifications:
 No changes since last version.
 
