--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.0 (unreleased)
+* Version 3.1.0pre0 (released 2012-08-05)
 
 ** libgnutls: Added direct support for TPM as a cryptographic module 
 in gnutls/tpm.h. 
