--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,9 @@ and gnutls_x509_privkey_import_pkcs8(), return consistently
 GNUTLS_E_DECRYPTION_FAILED if the input structure is encrypted but no 
 password was provided.
 
+** libgnutls: Added gnutls_handshake_set_timeout() a function that
+allows to set the maximum time spent in a handshake.
+
 ** libgnutlsxx: Added session::set_transport_vec_push_function. Patch
 by Alexandre Bique.
 
