--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,17 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.1 (unreleased)
+
+** tpmtool: No longer asks for key password in registered keys.
+
+** API and ABI modifications:
+gnutls_sign_algorithm_get: Added
+gnutls_sign_get_hash_algorithm: Added
+gnutls_sign_get_pk_algorithm: Added
+GNUTLS_PK_RSA_HASH_ONLY: Added
+
+
 * Version 3.1.0 (released 2012-08-15)
 
 ** libgnutls: Added direct support for TPM as a cryptographic module 
