Added Heartbeat extension support.
Signed-off-by: Nikos Mavrogiannopoulos <nmav@gnutls.org>

--- a/doc/cha-intro-tls.texi
+++ b/doc/cha-intro-tls.texi
@@ -379,6 +379,7 @@ in @acronym{GnuTLS} are:
 @item Maximum fragment length negotiation
 @item Server name indication
 @item Session tickets
+@item HeartBeat
 @item Safe Renegotiation
 @end itemize
 
@@ -388,6 +389,7 @@ and they will be discussed in the subsections that follow.
 * Maximum fragment length negotiation::
 * Server name indication::
 * Session tickets::
+* HeartBeat::
 * Safe renegotiation::
 @end menu
 
@@ -435,6 +437,30 @@ to the client. Because session parameters are sensitive they are encrypted
 and authenticated with a key only known to the server and then sent to the
 client. The Session Tickets in RFC 5077 @xcite{TLSTKT}, describe this 
 idea, which is implemented in GnuTLS.
+
+@node HeartBeat
+@subsection HeartBeat
+@cindex TLS extensions
+@cindex heartbeat
+
+The TLS extension which allows to request response from the peer in a
+way similar to ping command described in @xcite{RFC6520}. This
+extension is disabled by default - user have to call
+@funcref{gnutls_heartbeat_allow} to enable it. Note: this will set
+local policy affecting HeartBeat messages coming from the peer - the policy
+could be checked via @funcref{gnutls_heartbeat_enabled_local}. The
+same policy set by the peer for our messages could be checked via
+@funcref{gnutls_heartbeat_enabled_remote}. The requests coming from
+peer are answered automatically (if policy permits) inside
+@funcref{record_add_to_buffers}, requests to peer could be send via
+@funcref{gnutls_heartbeat_ping} or
+@funcref{gnutls_heartbeat_ping_rnd}. Each request triggers timeout
+which could be checked and manipulated with @funcref{gnutls_heartbeat_timeout}.
+
+Policy-related functions:
+@showfuncB{gnutls_heartbeat_allow,gnutls_heartbeat_deny}, @showfuncB{gnutls_heartbeat_enabled_local,gnutls_heartbeat_enabled_remote}
+Operational functions:
+@showfuncB{gnutls_heartbeat_timeout},@showfuncB{gnutls_heartbeat_ping,gnutls_heartbeat_ping_rnd}
 
 @node Safe renegotiation
 @subsection Safe renegotiation
