--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,10 @@ See the end for copying conditions.
 
 ** gnutls-serv: Listens on IPv6. Patch by Bernhard R. Link.
 
+** libgnutls: Be tolerant in ECDSA signature violations (e.g. using
+SHA256 with a SECP384 curve instead of SHA-384), to interoperate with
+openssl.
+
 ** libgnutls: Fixed DSA and ECDSA signature generation in
 smart cards.
 
